--- a/src/components/CartDropdown/cart-dropdown.styles.scss
+++ b/src/components/CartDropdown/cart-dropdown.styles.scss
@@ -10,6 +10,7 @@
   top: 90px;
   right: 40px;
   z-index: 5;
+  overflow: scroll;
 
   .empty-message {
     font-size: 18px;
@@ -22,8 +23,9 @@
     flex-direction: column;
     overflow: scroll;
   }
-
+ 
   button {
     margin-top: auto;
+    margin-left:auto;
   }
 }
