--- a/src/index.scss
+++ b/src/index.scss
@@ -1,7 +1,6 @@
 body {
   margin: 0;
   padding: 20px 40px;
-  font-family: 'Open Sans', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -18,4 +17,9 @@ a {
 
 * {
   box-sizing: border-box;
+}
+
+@font-face {
+  font-family: 'Open Sans Condensed',sans-serif;
+  src: url('./fonts/OpenSans-CondLight.ttf');
 }
