checkout page created

--- a/src/components/CartItem/cart-item.styles.scss
+++ b/src/components/CartItem/cart-item.styles.scss
@@ -19,5 +19,12 @@
     .name {
       font-size: 16px;
     }
+    .price {
+      font-size: 16px;
+
+      .multiplication {
+        font-size: 12px;
+      }
+    }
   }
 }
