--- a/src/index.scss
+++ b/src/index.scss
@@ -3,11 +3,8 @@ body {
   padding: 20px 40px;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  text-transform: uppercase;
 }
 
 a {
